<resources>

    <!-- Pantalla Principal -->
    <string name="app_name">PetCare</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="descripcion">PetCare, cuidandolos por ti.</string>


    <!-- Registro -->
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="nombre">Nombre completo</string>
    <string name="correo">Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="crearCuenta">Crear cuenta</string>

    <!-- Registro -->
    <string name="inicioDeSesion">Inicio de sesión</string>
    <string name="avisoRegistro">¿No tienes una cuenta?</string>


    <!--General-->
    <string name="agregarNuevo">Agregar nuevo</string>
    <string name="regresar">Regresar</string>
    <string name="siguiente">Siguiente</string>

    <!--Principal-->
    <string name="tusMascotas">Tus mascotas</string>
    <string name="agregarMascota">Agregar mascota</string>
    <string name="nombreMascota">Nombre de mascota</string>
    <string name="agregarMascotaFoto">Agregar foto</string>
    <string name="ver">Ver</string>
    <string name="administrar">Administrar</string>


</resources>