<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:background="@color/white"
    tools:context=".AgregarMascota">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregarMascota"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="45dp" />


    <EditText
        android:id="@+id/editTextNombreMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreMascota"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/buttonAgregarFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/verde"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/agregarMascotaFoto" />

    <Button
        android:id="@+id/botonRegresarAgregarMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/gris"
        android:text="@string/regresar"
        android:textColor="@color/white"
        android:textSize="30sp" />

</LinearLayout>
