<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogIn">

    <!-- Encabezado con GridLayout -->
    <GridLayout
        android:id="@+id/headerGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="2"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicioDeSesion"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="25dp"
            android:padding="16dp"/>


    </GridLayout>

    <!-- Contenido Principal con LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/headerGridLayout"
        android:layout_marginTop="25dp"
        android:padding="16dp">

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/azul"
            android:text="@string/iniciarSesion"
            android:textColor="@color/white"
            android:textColorLink="@color/green"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:onClick="abrirRegistro"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/avisoRegistro"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/verde"
            android:text="@string/registrarse"
            android:textColor="@color/white"
            android:textColorLink="@color/green"
            android:textSize="30sp" />

        <Button
            android:id="@+id/botonRegresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/gris"
            android:text="@string/regresar"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

</RelativeLayout>

